test/src/e2e_vm_tests/test_programs/should_pass/language/predicate_while_dep/src/main.sw
predicate;

mod loop;

fn main() -> bool {
    loop::loop()
}
