test/src/e2e_vm_tests/test_programs/should_fail/predicate_while_dep/src/main.sw
predicate;

dep loop;

fn main() -> bool {
    loop::loop()
}
